@@ -13394,6 +13394,9 @@ a product of disjoint cycles (\kbd{cyc}); return $p^n$ (as a \kbd{cyc}).
 
 \fun{GEN}{perm_cycles}{GEN p} return the cyclic decomposition of $p$.
 
+\fun{GEN}{perm_order}{GEN p} returns the order of the permutation $p$
+(as the lcm of its cycle lengths).
+
 \fun{ulong}{perm_orderu}{GEN p} returns the order of the permutation $p$
 (as the lcm of its cycle lengths) assuming it fits in a \kbd{ulong}.
 
