@@ -1,7 +1,7 @@
 Function: permorder
 Section: combinatorics
 C-Name: permorder
-Prototype: lG
+Prototype: G
 Help: permorder(x): order of the permutation x.
 Doc: given a permutation $x$ on $n$ elements, return its order.
  \bprog
