@@ -4620,6 +4620,7 @@ GEN     groupelts_to_group(GEN G);
 GEN     numtoperm(long n, GEN x);
 int     perm_commute(GEN p, GEN q);
 GEN     perm_cycles(GEN v);
+GEN     perm_order(GEN perm);
 ulong   perm_orderu(GEN perm);
 GEN     perm_pow(GEN perm, GEN exp);
 GEN     perm_powu(GEN perm, ulong exp);
@@ -4627,7 +4628,7 @@ long    perm_sign(GEN perm);
 GEN     perm_to_GAP(GEN v);
 GEN     perm_to_Z(GEN v);
 GEN     permcycles(GEN perm);
-long    permorder(GEN perm);
+GEN     permorder(GEN perm);
 long    permsign(GEN perm);
 GEN     permtonum(GEN x);
 GEN     quotient_group(GEN C, GEN G);
