@@ -27,7 +27,3 @@ forperm(1,p,print(p))
 forperm(p,3,)
 forperm(1.0,q,)
 forperm(-1,q,)
-permsign(Vecsmall([1,1]))
-permsign(Vecsmall([1,2,1]))
-permorder(Vecsmall([1,2,1]))
-permcycles(Vecsmall([1,2,1]))
